Implement CRUD functionality for ToDo items with handler, service, and repository layers
- Added CreateToDo handler to manage ToDo creation requests.
- Implemented ToDo service
- Created repository layer for database interactions with ToDo items.
- Developed authentication middleware to secure routes .
- Enhanced error handling for  robustness.
