# src/api/api.go
@@ -31,7 +31,10 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 	{
 		//User
 		users := v1.Group("/users")
+		todo := v1.Group("/todo", middlewares.Authentication(cfg))
 		routers.User(users, cfg)
+		routers.Todo(todo, cfg)
+
 	}
 
 }
