# src/api/dto/todo.go
@@ -1,0 +1,15 @@
+package dto
+
+type CreateTodoRequest struct {
+	Title       string `json:"title" binding:"required"`
+	Description string `json:"description" binding:"required"`
+	Completed   bool   `json:"completed"`
+}
+
+type TodoResponse struct {
+	Id          int    `json:"id"`
+	Title       string `json:"title"`
+	Description string `json:"description"`
+	Completed   bool   `json:"completed"`
+	UserId      int    `json:"userId"`
+}
